Prevent region panel going offscreen on small screens

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -55,6 +55,7 @@ body {
 
 .app > main {
   display: flex;
+  justify-content: flex-end;
   width: 100%;
   height: 100%;
 }
